# lopsy.art

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  LICENSE.md  README.md  RENDERER_ADAPTER_PLAN.md  SKIA-MIGRATION-SUMMARY.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  summary.md  tsconfig.json  vite.config.ts  vitest.config.ts
engine-rs/crates/lopsy-wasm/: Cargo.toml
engine-rs/crates/lopsy-wasm/src/: brush_gpu.rs  clone_stamp_gpu.rs  color_mgmt.rs  compositor.rs  dodge_burn_gpu.rs  engine.rs  filter_gpu.rs  gradient_gpu.rs  history_brush_gpu.rs  layer_manager.rs  lib.rs  liquify_gpu.rs  overlay_renderer.rs  selection_gpu.rs  shape_gpu.rs  smudge_gpu.rs
engine-rs/crates/lopsy-wasm/src/api/: adjustment.rs  drawing.rs  fill.rs  filter.rs  layer.rs  magnetic_lasso.rs  mod.rs  overlay.rs  paint.rs  psd.rs  selection.rs
engine-rs/crates/lopsy-wasm/src/api/filter/: adjust.rs  blur.rs  distort.rs  mod.rs  noise.rs  preview.rs  render.rs  stylize.rs
engine-rs/crates/lopsy-wasm/src/gpu/: context.rs  framebuffer.rs  mod.rs  shader.rs  texture_pool.rs
engine-rs/crates/lopsy-wasm/src/gpu/shaders/: blend.glsl  blit.glsl  blit_region.glsl  clipboard_clear.glsl  clipboard_copy.glsl  composite.glsl  final_blit.glsl  flip.glsl  rotate90.glsl  selection_fill.glsl  transform_affine.glsl  transform_perspective.glsl
engine-rs/crates/lopsy-wasm/src/gpu/shaders/brush/: brush_dab.glsl  clone_stamp.glsl  dodge_burn.glsl  dodge_burn_dab.glsl  eraser_dab.glsl  history_brush_dab.glsl  liquify_warp.glsl  opacity_clamp.glsl  (+1 more)
(+662 files in other folders)
