[package]
name = "lopsy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lopsy-core = { path = "../lopsy-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlActiveInfo",
    "WebGlVertexArrayObject",
    "ImageBitmap",
    "console",
]
